--- a/notebooks/GA_API.ipynb
+++ b/notebooks/GA_API.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "def format_summary(response):\n",
     "    try:\n",
-    "        # create row index\n",
+    "        # crea un index para row\n",
     "        try: \n",
     "            row_index_names = response['reports'][0]['columnHeader']['dimensions']\n",
     "            row_index = [ element['dimensions'] for element in response['reports'][0]['data']['rows'] ]\n",
@@ -60,14 +60,13 @@
     "        except:\n",
     "            row_index_named = None\n",
     "        \n",
-    "        # extract column names\n",
+    "        # extrae la columna names\n",
     "        summary_column_names = [item['name'] for item in response['reports'][0]\n",
     "                                ['columnHeader']['metricHeader']['metricHeaderEntries']]\n",
     "    \n",
-    "        # extract table values\n",
+    "        # Extrae la tabla de values\n",
     "        summary_values = [element['metrics'][0]['values'] for element in response['reports'][0]['data']['rows']]\n",
     "    \n",
-    "        # combine. I used type 'float' because default is object, and as far as I know, all values are numeric\n",
     "        df = pd.DataFrame(data = np.array(summary_values), \n",
     "                          index = row_index_named, \n",
     "                          columns = summary_column_names).astype('float')\n",
@@ -79,11 +78,11 @@
     "\n",
     "def format_pivot(response):\n",
     "    try:\n",
-    "        # extract table values\n",
+    "        # extrae la tabla de values\n",
     "        pivot_values = [item['metrics'][0]['pivotValueRegions'][0]['values'] for item in response['reports'][0]\n",
     "                        ['data']['rows']]\n",
     "        \n",
-    "        # create column index\n",
+    "        # Crea un index para las columnas\n",
     "        top_header = [item['dimensionValues'] for item in response['reports'][0]\n",
     "                      ['columnHeader']['metricHeader']['pivotHeaders'][0]['pivotHeaderEntries']]\n",
     "        column_metrics = [item['metric']['name'] for item in response['reports'][0]\n",
@@ -93,7 +92,7 @@
     "                               axis = 1)\n",
     "        column_index = pd.MultiIndex.from_arrays(np.transpose(array))\n",
     "        \n",
-    "        # create row index\n",
+    "        # Crea un index para las rows\n",
     "        try:\n",
     "            row_index_names = response['reports'][0]['columnHeader']['dimensions']\n",
     "            row_index = [ element['dimensions'] for element in response['reports'][0]['data']['rows'] ]\n",
@@ -101,7 +100,7 @@
     "                                                        names = np.array(row_index_names))\n",
     "        except: \n",
     "            row_index_named = None\n",
-    "        # combine into a dataframe\n",
+    "        # Crea un df\n",
     "        df = pd.DataFrame(data = np.array(pivot_values), \n",
     "                          index = row_index_named, \n",
     "                          columns = column_index).astype('float')\n",
@@ -118,13 +117,13 @@
     "    return(pd.concat([summary, pivot], axis = 1))\n",
     "\n",
     "def run_report(body, credentials_file):\n",
-    "    #Create service credentials\n",
+    "    # Crea las credenciales\n",
     "    credentials = service_account.Credentials.from_service_account_file(credentials_file, \n",
     "                                scopes = ['https://www.googleapis.com/auth/analytics.readonly'])\n",
-    "    #Create a service object\n",
+    "    # Crea el servicio\n",
     "    service = build('analyticsreporting', 'v4', credentials=credentials)\n",
     "    \n",
-    "    #Get GA data\n",
+    "    \n",
     "    response = service.reports().batchGet(body=body).execute()\n",
     "    \n",
     "    return(format_report(response))"
