--- a/notebooks/H20.ipynb
+++ b/notebooks/H20.ipynb
@@ -133,180 +133,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cargamos los df para el modelo\n",
+    "# ===============================================================================\n",
+    "\n",
     "df = pd.read_csv('../data/merged_df_2022.csv',index_col= 0)\n",
     "df_train=df.iloc[1:].to_csv('../data/df_train.csv')\n",
     "df_test= (df.iloc[:1]).drop('revenue_resold', axis=1).to_csv('../data/df_test.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>transaction_type_name</th>\n",
-       "      <th>brand_id_name</th>\n",
-       "      <th>format_name</th>\n",
-       "      <th>device_name</th>\n",
-       "      <th>media_type</th>\n",
-       "      <th>industria</th>\n",
-       "      <th>revenue_resold</th>\n",
-       "      <th>impressions_resold</th>\n",
-       "      <th>cpm</th>\n",
-       "      <th>media_prec</th>\n",
-       "      <th>sessions</th>\n",
-       "      <th>avgSessionDuration</th>\n",
-       "      <th>users</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-02-01</td>\n",
-       "      <td>Preferred deal</td>\n",
-       "      <td>FYKGKT8</td>\n",
-       "      <td>Doble Robapaginas</td>\n",
-       "      <td>Mobile</td>\n",
-       "      <td>Web</td>\n",
-       "      <td>BUSINESS &amp; INDUSTRIAL : Retail - National</td>\n",
-       "      <td>30313.081125</td>\n",
-       "      <td>7090940</td>\n",
-       "      <td>4.27</td>\n",
-       "      <td>9.980189</td>\n",
-       "      <td>28352276.0</td>\n",
-       "      <td>104.732242</td>\n",
-       "      <td>6734689.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-02-01</td>\n",
-       "      <td>Preferred deal</td>\n",
-       "      <td>FYKGKT8</td>\n",
-       "      <td>Doble Robapaginas</td>\n",
-       "      <td>Desktop &amp; laptop</td>\n",
-       "      <td>Web</td>\n",
-       "      <td>BUSINESS &amp; INDUSTRIAL : Retail - National</td>\n",
-       "      <td>6291.752400</td>\n",
-       "      <td>1471794</td>\n",
-       "      <td>4.27</td>\n",
-       "      <td>9.980189</td>\n",
-       "      <td>28352276.0</td>\n",
-       "      <td>104.732242</td>\n",
-       "      <td>6734689.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-02-01</td>\n",
-       "      <td>Preferred deal</td>\n",
-       "      <td>YGB99WO</td>\n",
-       "      <td>Mobile Banner</td>\n",
-       "      <td>Mobile</td>\n",
-       "      <td>Web</td>\n",
-       "      <td>BUSINESS &amp; INDUSTRIAL : Online Shopping</td>\n",
-       "      <td>2047.528980</td>\n",
-       "      <td>1750025</td>\n",
-       "      <td>1.17</td>\n",
-       "      <td>9.980189</td>\n",
-       "      <td>28352276.0</td>\n",
-       "      <td>104.732242</td>\n",
-       "      <td>6734689.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-02-01</td>\n",
-       "      <td>Open auction</td>\n",
-       "      <td>YGB99WO</td>\n",
-       "      <td>Doble Robapaginas</td>\n",
-       "      <td>Mobile</td>\n",
-       "      <td>Web</td>\n",
-       "      <td>BUSINESS &amp; INDUSTRIAL : Online Shopping</td>\n",
-       "      <td>1511.448477</td>\n",
-       "      <td>1184032</td>\n",
-       "      <td>1.28</td>\n",
-       "      <td>9.980189</td>\n",
-       "      <td>28352276.0</td>\n",
-       "      <td>104.732242</td>\n",
-       "      <td>6734689.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-02-01</td>\n",
-       "      <td>Open auction</td>\n",
-       "      <td>H2UVNQP</td>\n",
-       "      <td>Doble Robapaginas</td>\n",
-       "      <td>Mobile</td>\n",
-       "      <td>Web</td>\n",
-       "      <td>FOOD &amp; GROCERIES : Retail - National</td>\n",
-       "      <td>1036.450798</td>\n",
-       "      <td>781967</td>\n",
-       "      <td>1.33</td>\n",
-       "      <td>9.980189</td>\n",
-       "      <td>28352276.0</td>\n",
-       "      <td>104.732242</td>\n",
-       "      <td>6734689.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date transaction_type_name brand_id_name        format_name   \n",
-       "0  2022-02-01        Preferred deal       FYKGKT8  Doble Robapaginas  \\\n",
-       "1  2022-02-01        Preferred deal       FYKGKT8  Doble Robapaginas   \n",
-       "2  2022-02-01        Preferred deal       YGB99WO      Mobile Banner   \n",
-       "3  2022-02-01          Open auction       YGB99WO  Doble Robapaginas   \n",
-       "4  2022-02-01          Open auction       H2UVNQP  Doble Robapaginas   \n",
-       "\n",
-       "        device_name media_type                                  industria   \n",
-       "0            Mobile        Web  BUSINESS & INDUSTRIAL : Retail - National  \\\n",
-       "1  Desktop & laptop        Web  BUSINESS & INDUSTRIAL : Retail - National   \n",
-       "2            Mobile        Web    BUSINESS & INDUSTRIAL : Online Shopping   \n",
-       "3            Mobile        Web    BUSINESS & INDUSTRIAL : Online Shopping   \n",
-       "4            Mobile        Web       FOOD & GROCERIES : Retail - National   \n",
-       "\n",
-       "   revenue_resold  impressions_resold   cpm  media_prec    sessions   \n",
-       "0    30313.081125             7090940  4.27    9.980189  28352276.0  \\\n",
-       "1     6291.752400             1471794  4.27    9.980189  28352276.0   \n",
-       "2     2047.528980             1750025  1.17    9.980189  28352276.0   \n",
-       "3     1511.448477             1184032  1.28    9.980189  28352276.0   \n",
-       "4     1036.450798              781967  1.33    9.980189  28352276.0   \n",
-       "\n",
-       "   avgSessionDuration      users  \n",
-       "0          104.732242  6734689.0  \n",
-       "1          104.732242  6734689.0  \n",
-       "2          104.732242  6734689.0  \n",
-       "3          104.732242  6734689.0  \n",
-       "4          104.732242  6734689.0  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ]
   },
   {
@@ -340,7 +172,9 @@
     }
    ],
    "source": [
-    "# cargar los datos en un H2OFrame\n",
+    "# Cargar los datos en un H2OFrame\n",
+    "# ===============================================================================\n",
+    "\n",
     "data = h2o.import_file('../data/df_train.csv')\n",
     "\n",
     "# separar el conjunto de datos en entrenamiento y prueba\n",
@@ -436,66 +270,10 @@
     }
    ],
    "source": [
+    "# Printeamos el resultado de la predicción\n",
+    "# ==============================================================================\n",
+    "\n",
     "print(predictions_df['predict'][0].round(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    13585.093359\n",
-       "Name: predict, dtype: float64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['revenue_resold'][0]-predictions_df['predict']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    55.184056\n",
-       "Name: predict, dtype: float64"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((predictions_df['predict']/df['revenue_resold'][0])*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30313.08\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df['revenue_resold'][0].round(2))"
    ]
   },
   {
@@ -597,41 +375,10 @@
     }
    ],
    "source": [
-    "print(aml.leader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert H2OFrame object to Pandas dataframe\n",
-    "df_h20 = lb.as_data_frame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Almacenamos el resultado en un pickle\n",
+    "# Printeamos la info del mejor modelo\n",
     "# ==============================================================================\n",
     "\n",
-    "with open(f'../data/df_h20.pkl', 'wb') as h20:\n",
-    "        pickle.dump(df_h20, h20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "with open('../data/df_h20.pkl', 'rb') as df_h20:\n",
-    "       lb = pickle.load(df_h20)"
+    "print(aml.leader)"
    ]
   }
  ],
